--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
-    "vue": "^3.2.37"
+    "vue": "^3.2.37",
+    "vue3-carousel": "^0.1.46"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.1",
