--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "vue": "^3.2.37",
+    "vue-axios": "^3.4.1",
+    "vue-router": "^4.1.4",
     "vue3-carousel": "^0.1.46"
   },
   "devDependencies": {
